# aya

./: Cargo.toml
.github/workflows/: ci.yml
aya/: CHANGELOG.md
aya-build/: CHANGELOG.md
aya-build/src/: lib.rs
aya-ebpf-macros/: CHANGELOG.md  Cargo.toml
aya-ebpf-macros/src/: btf_map.rs  iter.rs  lib.rs
aya-log/: CHANGELOG.md
aya-log-common/: CHANGELOG.md
aya-log-common/src/: lib.rs
aya-log-ebpf-macros/: CHANGELOG.md
aya-log-ebpf-macros/src/: expand.rs
aya-log-parser/: CHANGELOG.md
aya-log/src/: lib.rs
aya-netlink/: Cargo.toml
aya-obj/: CHANGELOG.md
aya-obj/src/: obj.rs
aya-obj/src/btf/: btf.rs
aya-test/: Cargo.toml
aya-test-runner/: Cargo.toml
aya-test-runner/src/: lib.rs  main.rs
aya-test/src/: lib.rs
aya/src/: bpf.rs  test_helpers.rs
aya/src/maps/: async_ringbuf.rs  hash_of_maps.rs  mod.rs  task_storage.rs
aya/src/programs/: iter.rs  lsm.rs  mod.rs  raw_trace_point.rs
aya/src/sys/: bpf.rs  pid_fd.rs
bpf/aya-bpf-macros/src/: expand.rs  lib.rs
bpf/aya-bpf/src/maps/: hash_of_maps.rs  mod.rs  per_cpu_array.rs  ringbuf.rs
bpf/aya-bpf/src/programs/: raw_tracepoint.rs  sk_buff.rs  tc.rs  xdp.rs
ebpf/aya-ebpf/: CHANGELOG.md  Cargo.toml
ebpf/aya-ebpf-bindings/: CHANGELOG.md
ebpf/aya-ebpf-cty/: CHANGELOG.md
ebpf/aya-ebpf/src/: helpers.rs
ebpf/aya-ebpf/src/btf_maps/: hash_map.rs  mod.rs  sock_hash.rs  stack.rs  stack_trace.rs  task_storage.rs
ebpf/aya-ebpf/src/maps/: hash_map.rs
ebpf/aya-log-ebpf/: CHANGELOG.md
test/integration-common/src/: lib.rs
test/integration-ebpf/: Cargo.toml  build.rs
test/integration-ebpf-btf/: Cargo.toml  build.rs  rust-toolchain.toml
test/integration-ebpf-btf/.cargo/: config.toml
test/integration-ebpf/c-shim/: vmlinux.c  vmlinux.h
test/integration-ebpf/src/: hash_map.rs  helpers.rs  iter.rs  log_str.rs  lsm.rs  packet.rs  ringbuf.rs  task_storage.rs  uprobe.rs
test/integration-test/: Cargo.toml  build.rs
test/integration-test/bpf/: iter.bpf.c  ksym.bpf.c  task_storage.bpf.c
test/integration-test/src/: lib.rs  tests.rs
xtask/: Cargo.toml
xtask/public-api/: aya-ebpf.txt
xtask/src/: main.rs  run.rs
xtask/src/codegen/: aya_netlink.rs  aya_obj.rs  mod.rs
(+36 files in other folders)
