[package]
description = "Rust library for netlink, a communication interface between Linux kernel and user-space."
documentation = "https://docs.rs/aya-netlink"
keywords = ["linux", "netlink", "socket"]
name = "aya-netlink"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
