[package]
name = "aya-test"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
aya = { path = "../aya", version = "^0.13.2", default-features = false }
libc = { workspace = true }
nix = { workspace = true, features = ["mount", "sched"] }
