[package]
name = "integration-ebpf-btf"
version = "0.1.0"
publish = false
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
aya-ebpf = { path = "../../ebpf/aya-ebpf" }
aya-log-ebpf = { path = "../../ebpf/aya-log-ebpf" }

[build-dependencies]
which = { workspace = true }
xtask = { path = "../../xtask" }

[[bin]]
name = "maps_btf"
path = "src/maps.rs"

[[bin]]
name = "redirect_btf"
path = "src/redirect.rs"

[[bin]]
name = "ring_buf_btf"
path = "src/ring_buf.rs"
